--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: 'Poppins', sans-serif;
+  background-color: #fff;
+  color: #333;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
+  background-color: #fff;
+  padding: 1rem 2rem;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+}
+nav ul{
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+}
+nav ul li{
+  cursor: pointer;
+  transition: color 0.3s;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+nav ul li a{
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul li::after{
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #495e57;
+  transition: width .3s ease;
+}
+nav ul li:hover::after{
+  width: 100%;
+}
+nav ul li:hover{
+  color: #495e57;
+}
+
+/* Main */
+
+main{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #495e57;
+}
+
+.main-text{
+  flex: 1;
+  padding-left: 12rem;
+  max-width: 600px;
+}
+
+.main-title{
+  font-size: 3rem;
+  color: #f4ce14;
+  margin-bottom: 0.5rem;
+}
+.main-subtitle{
+  font-size: 2rem;
+  color: #eeeaea;
+  margin-bottom: 1rem;
+}
+.main-description{
+  color: #fff;
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.6;
+}
+.main-button{
+  padding: 0.75rem 1.5rem;
+  background-color: #f4ce14;
+  color: #000;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s;
+}
+.main-button:hover{
+  background-color: #c2a40e;
+}
+
+.main-image{
+  background-size: cover;
+  background-position: center;
+  height: 60dvh;
+  width: 30dvw;
+  border-radius: 10px;
+  position: relative;
+  top:80px;
+  right: 200px;
+  text-align: center;
+  overflow: hidden;
 }
